--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{ "accessKeyId": "AKIAJCYRDH5YBUQ5AS5A", "secretAccessKey": "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", "region": "us-west-2" }
+{ "accessKeyId": "AKIAJ6B4OSWQ75QJ3TLA", "secretAccessKey": "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", "region": "us-west-2" }
