--- a/package.json
+++ b/package.json
@@ -5,22 +5,31 @@
   "main": "server/index.js",
   "dependencies": {
     "Faker": "^0.7.2",
+    "appmetrics": "^3.1.1",
+    "appmetrics-elk": "^1.0.2",
     "aws-sdk": "^2.138.0",
     "axios": "^0.17.0",
     "body-parser": "^1.18.2",
     "elasticsearch": "^13.3.1",
     "express": "^4.16.2",
+    "graphite": "0.0.7",
     "json-loader": "^0.5.7",
     "mongodb": "^2.2.33",
     "mongoose": "^4.12.4",
     "neo4j-driver": "^1.2.0",
+    "node-statsd": "^0.1.1",
     "pg": "^7.3.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
+    "save": "^2.3.1",
     "sentencer": "^0.1.5",
     "sequelize": "^4.18.0",
     "sqs-consumer": "^3.7.0",
-    "uuid": "^3.1.0"
+    "statsd": "^0.8.0",
+    "statsd-client": "^0.4.0",
+    "uuid": "^3.1.0",
+    "winston": "^2.4.0",
+    "winston-logstash": "^0.3.0"
   },
   "devDependencies": {},
   "scripts": {
