--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{ "accessKeyId": "AKIAJ6B4OSWQ75QJ3TLA", "secretAccessKey": "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", "region": "us-west-2" }
+{ "accessKeyId": "AKIAIYA56LBRYN6NLRCQ", "secretAccessKey": "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", "region": "us-west-2" }
