--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "appmetrics-elk": "^1.0.2",
     "aws-sdk": "^2.138.0",
     "axios": "^0.17.0",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "elasticsearch": "^13.3.1",
     "express": "^4.16.2",
@@ -19,11 +20,13 @@
     "neo4j-driver": "^1.2.0",
     "node-statsd": "^0.1.1",
     "pg": "^7.3.0",
+    "redis": "^2.8.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "save": "^2.3.1",
     "sentencer": "^0.1.5",
     "sequelize": "^4.18.0",
+    "socket.io": "^2.0.4",
     "sqs-consumer": "^3.7.0",
     "statsd": "^0.8.0",
     "statsd-client": "^0.4.0",
